# DORA_project

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: .env  app.py  chatbot.py  dockerfile  pyproject.toml  readme  requirements.txt
dags/: ml_pipeline.py
data/: raw_dataset.csv.dvc
data/processed/: test.csv.dvc  train.csv.dvc
data/raw/: sales_data.csv.dvc
frontend/: app.py  dockerfile  pyproject.toml  requirements.txt
models/: gb_model_v1.pkl.dvc  rf_model_v1.pkl.dvc  svm_model_v1.pkl.dvc
notebooks/: 01_data_preprocessing.ipynb  02_model_training.ipynb  03_model_evaluation.ipynb
reports/: model_comparison.md
results/: accuracy.txt.dvc
